Notes being stored in an array. Added log button for debugging purposes.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,7 @@
   </div>
 
   <button id="add-note-button">Add Note</button>
+  <button id="log">Log</button>
   <div id="note-container"></div>
   
   <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
