--- a/client/public/stream/saved/index.html
+++ b/client/public/stream/saved/index.html
@@ -5,9 +5,11 @@
     <title>Video with markers</title>
     <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet">
     <link href="css/videojs.markers.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../shared/css/style.css" />
     <script src="http://code.jquery.com/jquery-2.0.3.min.js" defer></script>
     <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
     <script src='js/videojs-markers.js'></script>
+    <script type="module" src="../shared/js/annotationmanager.js"></script>
 </head>
 
 <body>
@@ -16,6 +18,7 @@
         <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
     </video>
 
+    <div id="note-container"></div>
     <script>
         var player = videojs('example_video_1');
         player.markers({
