Made navbar for Home
Other pages aren't accepting it quite so well, can be fixed with other navbars for those pages

--- a/client/public/Login.html
+++ b/client/public/Login.html
@@ -4,11 +4,31 @@
   <link rel="stylesheet" href="stream/shared/css/style.css" />
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"
     type='text/css'>
+  <link rel="stylesheet" href="homeStyle.css" />
+
   <link rel="stylesheet" href="loginStyle.css" />
   <title>Medical Twitch Login Page</title>
 </head>
 
+<!-- Nav bar -->
+<nav>
+  <div class="logo">Surgery Streaming</div>
+  <input type="checkbox" id="click">
+  <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Recorded Streams</a></li>
+    <li><a href="Login.html">Login</a></li>
+  </ul>
+</nav>
+<!-- end nav bar -->
+
 <body>
+
+
   <div class="wrapper">
     <header>Login Form</header>
     <form action="#">
