--- a/client/public/Registration.html
+++ b/client/public/Registration.html
@@ -2,11 +2,28 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="icon" href="stream/shared/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="stream/shared/css/style.css" />
+  <link rel="stylesheet" href="homeStyle.css" />
+
   <link rel="stylesheet" href="regStyle.css" />
   <title>Medical Twitch Registration Page</title>
 </head>
 
 <body>
+  <!-- Nav bar -->
+  <nav>
+    <div class="logo">Surgery Streaming</div>
+    <input type="checkbox" id="click">
+    <label for="click" class="menu-btn">
+      <i class="fas fa-bars"></i>
+    </label>
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Recorded Streams</a></li>
+      <li><a href="Login.html">Login</a></li>
+    </ul>
+  </nav>
+  <!-- end nav bar -->
   <div class="wrapper">
     <h2>Registration</h2>
     <form action="#">
