--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,31 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="icon" href="stream/shared/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="stream/shared/css/style.css" />
+  <!-- <link rel="stylesheet" href="stream/shared/css/style.css" /> -->
+  <link rel="stylesheet" href="homeStyle.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medical Twitch Homepage</title>
 </head>
 
+<!-- Nav bar -->
+<nav>
+  <div class="logo">Surgery Streaming</div>
+  <input type="checkbox" id="click">
+  <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Recorded Streams</a></li>
+    <li><a href="Login.html">Login</a></li>
+  </ul>
+</nav>
+<!-- end nav bar -->
+
 <body>
+
   <div id="container">
     <h1>Medical Twitch Homepage</h1>
 
