--- a/client/public/Login.html
+++ b/client/public/Login.html
@@ -20,7 +20,8 @@
   <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="#">Recorded Streams</a></li>
+    <li><a href="/stream/live/index.html">Current Stream</a></li>
+    <li><a href="/stream/saved/index.html">Recorded Streams</a></li>
     <li><a href="Login.html">Login</a></li>
   </ul>
 </nav>
