--- a/client/public/Registration.html
+++ b/client/public/Registration.html
@@ -8,22 +8,25 @@
   <title>Medical Twitch Registration Page</title>
 </head>
 
+<!-- Nav bar -->
+<nav>
+  <div class="logo">Surgery Streaming</div>
+  <input type="checkbox" id="click">
+  <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="/stream/live/index.html">Current Stream</a></li>
+    <li><a href="/stream/saved/index.html">Recorded Streams</a></li>
+    <li><a href="Login.html">Login</a></li>
+  </ul>
+</nav>
+<!-- end nav bar -->
+
 <body>
-  <!-- Nav bar -->
-  <nav>
-    <div class="logo">Surgery Streaming</div>
-    <input type="checkbox" id="click">
-    <label for="click" class="menu-btn">
-      <i class="fas fa-bars"></i>
-    </label>
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Recorded Streams</a></li>
-      <li><a href="Login.html">Login</a></li>
-    </ul>
-  </nav>
-  <!-- end nav bar -->
+
   <div class="wrapper">
     <h2>Registration</h2>
     <form action="#">
