--- a/client/public/stream/live/index.html
+++ b/client/public/stream/live/index.html
@@ -5,8 +5,25 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <link rel="icon" href="../shared/images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="../shared/css/style.css" />
-  
+  <link rel="stylesheet" href="../../homeStyle.css" />
+
 </head>
+<!-- Nav bar -->
+<nav>
+  <div class="logo">Surgery Streaming</div>
+  <input type="checkbox" id="click">
+  <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul>
+    <li><a href="../../index.html" class="active">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="index.html">Current Stream</a></li>
+    <li><a href="../saved/index.html">Recorded Streams</a></li>
+    <li><a href="../../Login.html">Login</a></li>
+  </ul>
+</nav>
+<!-- end nav bar -->
 
 <body>
 
@@ -14,21 +31,21 @@
     <h1>Medical Twitch</h1>
 
     <div id="player"></div>
-    
-  <div id="download" hidden="true">
-    <button type="button">Download</button>
-  </div>
 
-  <button id="add-note-button">Add Note</button>
-  <button id="log">Log</button>
-  <div id="note-container"></div>
-  
-  <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="https://unpkg.com/event-target@latest/min.js"></script>
-  <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.global.js"></script>
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
-  <script type="module" src="js/main.js"></script>
-  <script type="module" src="../shared/js/annotationmanager.js"></script>
+    <div id="download" hidden="true">
+      <button type="button">Download</button>
+    </div>
+
+    <button id="add-note-button">Add Note</button>
+    <button id="log">Log</button>
+    <div id="note-container"></div>
+
+    <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://unpkg.com/event-target@latest/min.js"></script>
+    <script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.global.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="../shared/js/annotationmanager.js"></script>
 
 </body>
 
