--- a/client/public/stream/saved/index.html
+++ b/client/public/stream/saved/index.html
@@ -2,26 +2,44 @@
 <html>
 
 <head>
-    <title>Video with markers</title>
-    <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet">
-    <link href="css/videojs.markers.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../shared/css/style.css" />
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js" defer></script>
-    <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
-    <script src='js/videojs-markers.js'></script>
-    <script type="module" src="../shared/js/annotationmanager.js"></script>
-    <script type="module" src="js/marker-manager.js"></script>
+  <title>Video with markers</title>
+  <link href="//vjs.zencdn.net/7.10.2/video-js.min.css" rel="stylesheet">
+  <link href="css/videojs.markers.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="../shared/css/style.css" />
+  <link rel="stylesheet" href="../../homeStyle.css" />
+
+  <script src="http://code.jquery.com/jquery-2.0.3.min.js" defer></script>
+  <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
+  <script src='js/videojs-markers.js'></script>
+  <script type="module" src="../shared/js/annotationmanager.js"></script>
+  <script type="module" src="js/marker-manager.js"></script>
 </head>
+<!-- Nav bar -->
+<nav>
+  <div class="logo">Surgery Streaming</div>
+  <input type="checkbox" id="click">
+  <label for="click" class="menu-btn">
+    <i class="fas fa-bars"></i>
+  </label>
+  <ul>
+    <li><a href="../../index.html" class="active">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="../live/index.html">Current Stream</a></li>
+    <li><a href="index.html">Recorded Streams</a></li>
+    <li><a href="../../Login.html">Login</a></li>
+  </ul>
+</nav>
+<!-- end nav bar -->
 
 <body>
-    <div id="video-container">
-        <video autoplay="" class="video-js vjs-default-skin" controls="" data-setup='{"width": 1000, "height": 800}'
-            height="360" id="example_video_1" preload="auto" width="640" muted>
-            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-                type="video/mp4" />
-        </video>
-    </div>
-    <div id="note-container"></div>
+  <div id="video-container">
+    <video autoplay="" class="video-js vjs-default-skin" controls="" data-setup='{"width": 1000, "height": 800}'
+      height="360" id="example_video_1" preload="auto" width="640" muted>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+        type="video/mp4" />
+    </video>
+  </div>
+  <div id="note-container"></div>
 
 </body>
 
