Renamed and reorganized html files.

--- a/client/public/registration/Registration.html
+++ b/client/public/registration/Registration.html
@@ -1,8 +1,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="icon" href="stream/shared/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="stream/shared/css/style.css" />
-  <link rel="stylesheet" href="homeStyle.css" />
+  <link rel="icon" href="../stream/shared/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../stream/shared/css/style.css" />
+  <link rel="stylesheet" href="../homeStyle.css" />
 
   <link rel="stylesheet" href="regStyle.css" />
   <title>Medical Twitch Registration Page</title>
@@ -16,10 +16,10 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul>
-    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="../index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="/stream/live/index.html">Current Stream</a></li>
-    <li><a href="/stream/saved/index.html">Recorded Streams</a></li>
+    <li><a href="../stream/live/stream.html">Current Stream</a></li>
+    <li><a href="../stream/saved/saved_recordings.html">Recorded Streams</a></li>
     <li><a href="Login.html">Login</a></li>
   </ul>
 </nav>
@@ -59,7 +59,7 @@
         <input type="submit" value="Register Now">
       </div>
       <div class="text">
-        <h3>Already have an account? <a href="Login.html">Login Here</a></h3>
+        <h3>Already have an account? <a href="../login/Login.html">Login Here</a></h3>
       </div>
     </form>
   </div>
