--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -24,9 +24,9 @@
   <ul>
     <li><a href="../../index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="../live/index.html">Current Stream</a></li>
-    <li><a href="index.html">Recorded Streams</a></li>
-    <li><a href="../../Login.html">Login</a></li>
+    <li><a href="../live/stream.html">Current Stream</a></li>
+    <li><a href="saved_recordings.html">Recorded Streams</a></li>
+    <li><a href="../../login/Login.html">Login</a></li>
   </ul>
 </nav>
 <!-- end nav bar -->
