--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,9 +18,9 @@
   <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="/stream/live/index.html">Current Stream</a></li>
-    <li><a href="/stream/saved/index.html">Recorded Streams</a></li>
-    <li><a href="Login.html">Login</a></li>
+    <li><a href="/stream/live/stream.html">Current Stream</a></li>
+    <li><a href="/stream/saved/saved_recordings.html">Recorded Streams</a></li>
+    <li><a href="login/Login.html">Login</a></li>
   </ul>
 </nav>
 <!-- end nav bar -->
@@ -31,12 +31,12 @@
     <h1>Medical Twitch Homepage</h1>
 
     <section>
-      <h2 id="live"><a href="stream/live/index.html">Live Streaming From Unity</a></h2>
+      <h2 id="live"><a href="stream/live/stream.html">Live Streaming From Unity</a></h2>
       <p>This is a sample for receiving live video / audio from Unity.</p>
     </section>
 
     <section>
-      <h2 id="saved"><a href="stream/saved/index.html">Saved Video Sample</a></h2>
+      <h2 id="saved"><a href="stream/saved/saved_recordings.html">Saved Video Sample</a></h2>
       <p>This is a sample for showing recorded and saved stream.</p>
     </section>
 
