--- a/client/public/login/Login.html
+++ b/client/public/login/Login.html
@@ -1,10 +1,10 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="icon" href="stream/shared/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="stream/shared/css/style.css" />
+  <link rel="icon" href="../stream/shared/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../stream/shared/css/style.css" />
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"
     type='text/css'>
-  <link rel="stylesheet" href="homeStyle.css" />
+  <link rel="stylesheet" href="../homeStyle.css" />
 
   <link rel="stylesheet" href="loginStyle.css" />
   <title>Medical Twitch Login Page</title>
@@ -18,10 +18,10 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul>
-    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="../index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="/stream/live/index.html">Current Stream</a></li>
-    <li><a href="/stream/saved/index.html">Recorded Streams</a></li>
+    <li><a href="../stream/live/stream.html">Current Stream</a></li>
+    <li><a href="../stream/saved/saved_recordings.html">Recorded Streams</a></li>
     <li><a href="Login.html">Login</a></li>
   </ul>
 </nav>
@@ -58,7 +58,7 @@
 
 
     </form>
-    <div class="register-link">Don't have an account?<a href="Registration.html">Register Here</a></div>
+    <div class="register-link">Don't have an account?<a href="../registration/Registration.html">Register Here</a></div>
   </div>
 
   <script src="loginFX.js"></script>
