--- a/client/public/login/Login.html
+++ b/client/public/login/Login.html
@@ -61,5 +61,5 @@
     <div class="register-link">Don't have an account?<a href="../registration/Registration.html">Register Here</a></div>
   </div>
 
-  <script src="loginFX.js"></script>
+  <script src="login.js"></script>
 </body>
