--- a/client/public/registration/Registration.html
+++ b/client/public/registration/Registration.html
@@ -20,7 +20,7 @@
     <li><a href="#">About</a></li>
     <li><a href="../stream/live/stream.html">Current Stream</a></li>
     <li><a href="../stream/saved/saved_recordings.html">Recorded Streams</a></li>
-    <li><a href="Login.html">Login</a></li>
+    <li><a href="../login/Login.html">Login</a></li>
   </ul>
 </nav>
 <!-- end nav bar -->
