--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,15 @@
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
   <title>Medical Twitch Homepage</title>
+
+  <script>
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(';').shift();
+    }
+
+  </script>
 </head>
 <!--Navigation bar-->
 <div id="nav-placeholder">
@@ -18,13 +27,13 @@
 </div>
 
 <script>
-  if (document.cookie.indexOf("LoggedIn") == -1) {
+  if (document.cookie.indexOf(getCookie("uuid")) !== -1) {
     $(function () {
-      $("#nav-placeholder").load("navLogin.html");
+      $("#nav-placeholder").load("navLogout.html");
     });
   } else {
     $(function () {
-      $("#nav-placeholder").load("navLogout.html");
+      $("#nav-placeholder").load("navLogin.html");
     });
   }
 
