--- a/client/public/navLogout.html
+++ b/client/public/navLogout.html
@@ -7,8 +7,8 @@
   <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="/stream/live/stream.html">Current Stream</a></li>
-    <li><a href="/stream/saved/saved_recordings.html">Recorded Streams</a></li>
+    <li><a href="stream/live/stream.html">Current Stream</a></li>
+    <li><a href="stream/saved/saved_recordings.html">Recorded Streams</a></li>
     <li><a id="login-button" href="login/Login.html">Logout</a></li>
   </ul>
 </nav>
