--- a/client/public/stream/live/stream.html
+++ b/client/public/stream/live/stream.html
@@ -7,9 +7,37 @@
   <link rel="stylesheet" href="../shared/css/style.css" />
   <link rel="stylesheet" href="../../homeStyle.css" />
 
+
+  <script>
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(';').shift();
+    }
+
+  </script>
 </head>
+<!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+  if (document.cookie.indexOf(getCookie("uuid")) !== -1) {
+    $(function () {
+      $("#nav-placeholder").load("../..navLogout.html");
+    });
+  } else {
+    $(function () {
+      $("#nav-placeholder").load("../..navLogin.html");
+    });
+  }
+
+</script>
+<!--end of Navigation bar-->
+
 <!-- Nav bar -->
-<nav>
+<!-- <nav>
   <div class="logo">Surgery Streaming</div>
   <input type="checkbox" id="click">
   <label for="click" class="menu-btn">
@@ -22,7 +50,7 @@
     <li><a href="../saved/saved_recordings.html">Recorded Streams</a></li>
     <li><a href="../../login/Login.html">Login</a></li>
   </ul>
-</nav>
+</nav> -->
 <!-- end nav bar -->
 
 <body>
