--- a/client/public/login/Login.html
+++ b/client/public/login/Login.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="../homeStyle.css" />
 
   <link rel="stylesheet" href="loginStyle.css" />
+
+  <!-- Makes the Nav bar work -->
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
   <title>Medical Twitch Login Page</title>
 
   <script>
