--- a/client/public/registration/Registration.html
+++ b/client/public/registration/Registration.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" href="../homeStyle.css" />
 
   <link rel="stylesheet" href="regStyle.css" />
+
+  <!-- Makes the Nav bar work -->
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
   <title>Medical Twitch Registration Page</title>
 
   <script>
