--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -15,6 +15,10 @@
   <script type="module" src="js/marker-manager.js"></script>
 
 
+
+  <!-- Makes the Nav bar work -->
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
   <script>
     function getCookie(name) {
       const value = `; ${document.cookie}`;
