--- a/client/public/navLogin.html
+++ b/client/public/navLogin.html
@@ -9,7 +9,7 @@
     <li><a href="#">About</a></li>
     <li><a href="stream/live/stream.html">Current Stream</a></li>
     <li><a href="stream/saved/saved_recordings.html">Recorded Streams</a></li>
-    <li><a id="login-button" href="/login/Login.html">Login</a></li>
+    <li><a id="login-button" href="login/Login.html">Login</a></li>
   </ul>
 </nav>
 <!-- end nav bar -->
