Navbar working again

--- a/client/public/registration/Registration.html
+++ b/client/public/registration/Registration.html
@@ -28,7 +28,7 @@
 
 <script>
   $(function () {
-    $("#nav-placeholder").load("navForLog.html");
+    $("#nav-placeholder").load("/navForLog.html");
   });
 
 </script>
