--- a/client/public/login/Login.html
+++ b/client/public/login/Login.html
@@ -32,7 +32,7 @@
 
 <script>
   $(function () {
-    $("#nav-placeholder").load("navLogin.html");
+    $("#nav-placeholder").load("/navForLog.html");
   });
 
 </script>
