--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -36,11 +36,11 @@
 <script>
   if (document.cookie.indexOf(getCookie("uuid")) !== -1) {
     $(function () {
-      $("#nav-placeholder").load("navLogout.html");
+      $("#nav-placeholder").load("/navLogout.html");
     });
   } else {
     $(function () {
-      $("#nav-placeholder").load("navLogin.html");
+      $("#nav-placeholder").load("/navLogin.html");
     });
   }
 
