--- a/client/public/login/Login.html
+++ b/client/public/login/Login.html
@@ -21,7 +21,7 @@
     }
 
 
-    documnet.cookie = "uuid=;expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/";
+    document.cookie = "uuid=;expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/";
 
   </script>
 </head>
