--- a/client/public/navForLog.html
+++ b/client/public/navForLog.html
@@ -5,7 +5,7 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul>
-    <li><a href="localhost/index.html" class="active">Home</a></li>
+    <li><a href="/index.html" class="active">Home</a></li>
     <li><a href="#">About</a></li>
   </ul>
 </nav>
