--- a/client/public/navLogout.html
+++ b/client/public/navLogout.html
@@ -9,7 +9,45 @@
     <li><a href="#">About</a></li>
     <li><a href="/stream/live/stream.html">Current Stream</a></li>
     <li><a href="/stream/saved/saved_recordings.html">Recorded Streams</a></li>
-    <li><a id="login-button" href="/login/Login.html">Logout</a></li>
+    <li onclick="onLogout();"><a id="login-button">Logout</a></li>
   </ul>
 </nav>
+
+<script type="text/javascript">
+  window.onload = function () {
+    onLogout = async function () {
+      const cookie = getCookie("uuid");
+      await logout_web_request(cookie);
+    }
+  }
+
+  function getCookie(name) {
+    const value = `; ${document.cookie}`;
+    const parts = value.split(`; ${name}=`);
+    if (parts.length === 2) return parts.pop().split(';').shift();
+  }
+
+  async function logout_web_request(cookie) {
+    console.log(cookie);
+    try {
+      const response = await fetch("http://127.0.0.1:5001/unitystreamingapp/us-central1/web_updateUserUUIDLogout", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "uuid": cookie
+        },
+        redirect: "follow",
+        referrerPolicy: "no-referrer",
+      });
+      if (response.status == "200") {
+        document.cookie = "uuid=;expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/";
+        window.location.href="/login/Login.html";
+      } else {
+        alert("Something went wrong! Please try again.");
+      }
+    } catch (error) {
+      alert("Something went wrong! Please try again.");
+    }
+  }
+</script>
 <!-- end nav bar -->
