--- a/client/public/navLogin.html
+++ b/client/public/navLogin.html
@@ -5,7 +5,7 @@
     <i class="fas fa-bars"></i>
   </label>
   <ul>
-    <li><a href="/index.html" class="active">Home</a></li>
+    <li><a href="/index.html">Home</a></li>
     <li><a href="#">About</a></li>
     <li><a href="/stream/live/stream.html">Current Stream</a></li>
     <li><a href="/stream/saved/saved_recordings.html">Recorded Streams</a></li>
