--- a/client/public/stream/live/stream.html
+++ b/client/public/stream/live/stream.html
@@ -61,9 +61,23 @@
 
   <div id="container">
     <div id="player"></div>
-    <button id="add-note-button">Add Note</button>
-    <button id="log">Log</button>
-    <div id="note-container"></div>
+
+    <div class="add-note">
+      <h2 class="notes-title"><strong>NOTES</strong></h2>
+      <h1 class="header-divider">
+        <button class="add-note-button">
+          <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="2rem" width="2rem"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill="none" d="M0 0h24v24H0z"></path>
+            <path
+              d="M3 10h11v2H3v-2zm0-2h11V6H3v2zm0 8h7v-2H3v2zm15.01-3.13l.71-.71a.996.996 0 011.41 0l.71.71c.39.39.39 1.02 0 1.41l-.71.71-2.12-2.12zm-.71.71l-5.3 5.3V21h2.12l5.3-5.3-2.12-2.12z">
+            </path>
+          </svg>
+        </button>
+      </h1>
+    </div>
+
+    <div id="notes"></div>
 
     <script type="text/javascript" src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://unpkg.com/event-target@latest/min.js"></script>
