New ui for the notes view.

--- a/client/public/stream/shared/annotation_inner.html
+++ b/client/public/stream/shared/annotation_inner.html
@@ -12,6 +12,14 @@
                 <button class="cancel-button">Cancel</button>
                 <button class="save-button">Save</button>
             </div>
+            <div class="update-buttons">
+                <button class="edit-button">
+                    <img src="../static/edit.svg" />
+                </button>
+                <button class="delete-button">
+                    <img src="../static/delete.svg" />
+                </button>
+            </div>
             <div class="divider div-transparent"></div>
         </div>
     </div>
