--- a/client/public/navLogout.html
+++ b/client/public/navLogout.html
@@ -9,7 +9,7 @@
     <li><a href="#">About</a></li>
     <li><a href="/stream/live/stream.html">Current Stream</a></li>
     <li><a href="/stream/saved/saved_recordings.html">Recorded Streams</a></li>
-    <li onclick="onLogout();"><a id="login-button">Logout</a></li>
+    <li onclick="onLogout()"><a id="login-button">Logout</a></li>
   </ul>
 </nav>
 
