Fixed hardcoded paths.

--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -68,7 +68,7 @@
   <div id="video-container">
     <video autoplay="" class="video-js vjs-default-skin" controls="" data-setup='{"width": 1000, "height": 800}'
       height="360" id="example_video_1" preload="auto" width="640" muted>
-      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+      <source src="https://vrisb-streaming-bucket.s3.us-east-2.amazonaws.com/my-videoTestFromUnityCyberPunkNewer.mp4"
         type="video/mp4" />
     </video>
   </div>
