Added support for multiple stream hosting.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -47,7 +47,7 @@
     <h1>Medical Twitch Homepage</h1>
 
     <section>
-      <h2 id="live"><a href="stream/live/stream.html">Live Streaming From Unity</a></h2>
+      <h2 id="live"><a href="stream/live/stream_dashboard.html">Live Streaming From Unity</a></h2>
       <p>This is a sample for receiving live video / audio from Unity.</p>
     </section>
 
