Styled ongoing streams dashboard page.

--- a/client/public/navLogout.html
+++ b/client/public/navLogout.html
@@ -7,7 +7,7 @@
   <ul>
     <li><a href="/index.html">Home</a></li>
     <li><a href="#">About</a></li>
-    <li><a href="/stream/live/stream_dashboard.html">Current Stream</a></li>
+    <li><a href="/stream/live/stream_dashboard.html">Ongoing Streams</a></li>
     <li><a href="/stream/saved/saved_recordings.html">Recorded Streams</a></li>
     <li onclick="onLogout()"><a id="login-button">Logout</a></li>
   </ul>
