--- a/client/public/stream/live/stream_dashboard.html
+++ b/client/public/stream/live/stream_dashboard.html
@@ -1,2 +1,30 @@
 <script type="module" src="js/stream_dashboard.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+<link rel="stylesheet" href="../shared/css/style.css" />
+<link rel="stylesheet" href="../../homeStyle.css" />
+
+<!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+
+<script>
+    function getCookie(name) {
+        const value = `; ${document.cookie}`;
+        const parts = value.split(`; ${name}=`);
+        if (parts.length === 2) return parts.pop().split(';').shift();
+    }
+
+    if (document.cookie.indexOf(getCookie("uuid")) !== -1) {
+        $(function () {
+            $("#nav-placeholder").load("/navLogout.html");
+        });
+    } else {
+        $(function () {
+            $("#nav-placeholder").load("/navLogin.html");
+        });
+    }
+
+</script>
+
 <div id="dynamic-list-container"></div>
