--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -11,7 +11,6 @@
   <script src="http://code.jquery.com/jquery-2.0.3.min.js" defer></script>
   <script src="//vjs.zencdn.net/7.10.2/video.min.js"></script>
   <script src='js/videojs-markers.js'></script>
-  <script type="module" src="../shared/js/live_annotationmanager.js"></script>
   <script type="module" src="js/marker-manager.js"></script>
 
 
@@ -47,9 +46,8 @@
 </script>
 
 <body>
-  <div id="video-container">
-    <video autoplay="" class="video-js vjs-default-skin" controls="" data-setup='{"width": 1000, "height": 800}'
-      height="360" id="example_video_1" preload="auto" width="640" muted>
+  <div id="player">
+    <video autoplay="" class="video-js vjs-default-skin" controls="" id="Video" preload="auto" muted>
       <source src="https://vrisb-streaming-bucket.s3.us-east-2.amazonaws.com/my-videoTestFromUnityCyberPunkNewer.mp4"
         type="video/mp4" />
     </video>
