Added dashboard for the recorded videos.

--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -42,15 +42,11 @@
       $("#nav-placeholder").load("/navLogin.html");
     });
   }
-
 </script>
 
 <body>
   <div id="player">
-    <video autoplay="" class="video-js vjs-default-skin" controls="" id="Video" preload="auto" muted>
-      <source src="https://vrisb-streaming-bucket.s3.us-east-2.amazonaws.com/my-videoTestFromUnityCyberPunkNewer.mp4"
-        type="video/mp4" />
-    </video>
+    <video class="video-js vjs-default-skin vjs-big-play-centered" controls="" id="Video" preload="auto" muted></video>
   </div>
   <div id="note-container"></div>
 
