Showing recorded videos completed.

--- a/client/public/stream/saved/saved_recordings.html
+++ b/client/public/stream/saved/saved_recordings.html
@@ -48,7 +48,7 @@
   <div id="player">
     <video class="video-js vjs-default-skin vjs-big-play-centered" controls="" id="Video" preload="auto" muted></video>
   </div>
-  <div id="note-container"></div>
+  <div id="notes"></div>
 
 </body>
 
